2020-12-22   T.Küchel  <devel@zukuul.de>

	* new php upstream: 7.4.13

2020-11-21   T.Küchel  <devel@zukuul.de>

	* updated php upstream: 7.4.12

2020-11-11   T.Küchel  <devel@zukuul.de>

	* new php upstream: 7.4.12

2020-09-16   T.Küchel  <devel@zukuul.de>

	* updated php upstream: 7.4.11

2020-09-11   T.Küchel  <devel@zukuul.de>

	* new php upstream: 7.4.11

2020-09-09  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.10

2020-08-08  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.9

2020-07-27  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.8

2020-06-10  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.6

2020-02-29  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.3

2020-02-13  T.Küchel  <devel@zukuul.de>

	* updated php upstream

2020-01-25  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.2

2019-12-29  T.Küchel  <devel@zukuul.de>

	* updated php upstream

2019-12-20  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.1

2019-12-08  T.Küchel  <devel@zukuul.de>

	* updated php version
	* correct Dockerfile: php extension compile parameters

2019-11-30  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.0
	* change docker image to official linuxmuster/survey

2019-11-26  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.3.12

2019-10-30  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.3.11

2019-10-21  T.Küchel  <devel@zukuul.de>

	* new upstream version

2019-10-07  T.Küchel  <devel@zukuul.de>

	* new upstream php version
